<resources>
    <string name="app_name">tugas3ilham</string>
    <string name="ilham_gadget">ILHAM_GADGET</string>
    <string name="iphone12">Iphone12</string>
    <string name="samsung">Samsung</string>
    <string name="xiomi">Xiomi</string>
    <string name="oppo">Oppo</string>
    <string name="asus">Asus</string>
    <string name="iphone">IPHONE</string>
    <string name="kinerja_chipset_apple_a14_bionic_yang_bertenaga_punya_sensor_uwb_kualitas_layar_dengan_resolusi_tajam_hasil_fotografi_memukau_hadir_dengan_konektivitas_magsafe_untuk_wireless_charging_yang_lebih_cepat_dan_mendukung_ekosistem_aksesoris">Kinerja Chipset Apple A14 Bionic yang Bertenaga Punya Sensor UWB Kualitas Layar dengan Resolusi Tajam Hasil Fotografi Memukau Hadir dengan Konektivitas MagSafe untuk Wireless Charging yang Lebih Cepat dan Mendukung Ekosistem Aksesoris</string>
    <string name="idr_20_000_000_00">IDR.20.000.000,00</string>
    <string name="share">Share</string>
    <string name="processor_cpu_speed_3_36ghz_2_8ghz_2ghz_cpu_type_octa_core_display_size_main_display_153_9mm_6_1full_rectangle_149_9mm_5_9_rounded_corners_resolution_main_display_2340_x_1080_fhd_technology_main_display_dynamic_amoled_2x_color_depth_main_display_16m_max_refresh_rate_main_display_120_hz">Processor CPU Speed 3.36GHz, 2.8GHz, 2GHz CPU Type Octa-Core Display Size (Main_Display) 153.9mm (6.1full rectangle) / 149.9mm (5.9 rounded corners) Resolution (Main Display) 2340 x 1080 (FHD+) Technology (Main Display) Dynamic AMOLED 2X Color Depth (Main Display) 16M Max Refresh Rate (Main Display) 120 Hz</string>
    <string name="idr_25_000_000_00">idr_25_000_000_00</string>
    <string name="network_technology_gsm_hspa_lte_launch_announced_2018_february_14_status_available_released_2018_february_body_dimensions_158_6_x_75_4_x_8_1_mm_6_24_x_2_97_x_0_32_in_weight_181_g_6_38_oz_build_glass_front_gorilla_glass_aluminum_back_aluminum_frame">NETWORK\tTechnology GSM / HSPA / LTE LAUNCH\tAnnounced\t2018, February 14 Status\tAvailable. Released 2018, February BODY\tDimensions\t158.6 x 75.4 x 8.1 mm (6.24 x 2.97 x 0.32 in) Weight\t181 g (6.38 oz) Build\tGlass front (Gorilla Glass), aluminum back, aluminum frame</string>
    <string name="platform_os_android_8_1_oreo_coloros_5_1_chipset_qualcomm_sdm450_snapdragon_450_14_nm_cpu_octa_core_1_8_ghz_cortex_a53_gpu_adreno_506_memory_card_slot_microsdxc_dedicated_slot_internal_16gb_2gb_ram_32gb_3gb_ram_64gb_4gb_ram_emmc_5_1">PLATFORM\tOS\tAndroid 8.1 (Oreo), ColorOS 5.1 Chipset\tQualcomm SDM450 Snapdragon 450 (14 nm) CPU\tOcta-core 1.8 GHz Cortex-A53 GPU\tAdreno 506 MEMORY\tCard slot\tmicroSDXC (dedicated slot) Internal\t16GB 2GB RAM, 32GB 3GB RAM, 64GB 4GB RAM eMMC 5.1</string>
    <string name="platform_os_android_9_0_pie_rog_ui_chipset_qualcomm_sm8150_snapdragon_855_7_nm_cpu_octa_core_1x2_96_ghz_kryo_485_3x2_42_ghz_kryo_485_4x1_78_ghz_kryo_485_gpu_adreno_640_700_mhz_memory_card_slot_no_internal_128gb_8gb_ram_256gb_12gb_ram_512gb_12gb_ram_1tb_12gb_ram_ufs_3_0"><![CDATA[PLATFORM OS Android 9.0 (Pie), ROG UI Chipset Qualcomm SM8150 Snapdragon 855+ (7 nm) CPU Octa-core (1x2.96 GHz Kryo 485 & 3x2.42 GHz Kryo 485 & 4x1.78 GHz Kryo 485) GPU Adreno 640 (700 MHz) MEMORY Card slot No Internal 128GB 8GB RAM, 256GB 12GB RAM, 512GB 12GB RAM, 1TB 12GB RAM UFS 3.0]]></string>
    <string name="idr_30_000_000_00">IDR_30_000_000_00</string>
    <string name="laptop_asus">LAPTOP ASUS</string>
    <string name="laptop_xiomi">LAPTOP XIOMI</string>
    <string name="laptop_hp">LAPTOP HP</string>
    <string name="laptop_acer">LAPTOP ACER</string>
    <string name="laptop_msi">LAPTOP MSI</string>
    <string name="e210ma_color_peacock_blue_dreamy_white_rose_pink_operating_system_windows_10_home_asus_recommends_windows_10_pro_for_business_windows_11_home_asus_recommends_windows_11_pro_for_business_free_upgrade_to_windows_11">E210MA Color Peacock Blue Dreamy White Rose Pink Operating System Windows 10 Home - ASUS recommends Windows 10 Pro for business Windows 11 Home - ASUS recommends Windows 11 Pro for business Free Upgrade to Windows 11¹</string>
    <string name="layar_tipe_layar_15_6_fhd_resolusi_1920_x_1080_ppi_141_kontrol_kecerahan_peredupan_dc_kecerahan_220_nit_umum_rasio_kontras_500_1_gamut_warna_ntsc_45_umum_sudut_tampilan_90_h_sistem_operasi_windows_10_home_prosesor_11th_generation_intel_core_i3_1115g4_up_to_4_1_ghz_2_cores_4_threads_6_mb_cache_11th_generation_intel_core_i5_11300h">Layar Tipe Layar: 15.6” FHD Resolusi: 1920 x 1080 PPI: 141 Kontrol Kecerahan: Peredupan DC Kecerahan: 220 nit (umum) Rasio kontras: 500:1 Gamut warna: NTSC 45% (umum) Sudut tampilan: 90°(H) Sistem Operasi Windows 10 Home Prosesor 11th Generation Intel® Core™ i3-1115G4 (up to 4.1 GHz, 2 Cores, 4 Threads, 6 MB Cache) 11th Generation Intel® Core™ i5-11300H</string>
    <string name="amd_ryzen_5_processorwindows_11_home_single_language_hp_recommends_windows_11_pro_for_business14_hd_displayamd_radeon_graphics8_gb_ddr4_3200_ram512_gb_ssd_hard_drivebacklit_keyboard_hp_wolf_security">AMD Ryzen™ 5 processorWindows 11 Home Single Language – HP recommends Windows 11 Pro for business14 HD displayAMD Radeon™ Graphics8 GB DDR4-3200 RAM512 GB SSD Hard driveBacklit keyboard,HP Wolf Security</string>
    <string name="idr_13_000_000_00">IDR.13.000.000,00</string>
    <string name="idr_7_000_000_0">IDR.7.000.000,0</string>
    <string name="ukuran_layar_35_6cm_14_39_6cm_15_6_total_memori_sistem_terpasang_4gb_8gb_16gb_model_pengontrol_grafik_geforce_rtx_2050_geforce_mx350_geforce_mx550_iris_xe_graphics_uhd_graphics_kapasitas_total_solid_state_drive_256gb_512gb">Ukuran Layar 35.6cm (14) 39.6cm (15.6) Total Memori Sistem Terpasang 4GB 8GB 16GB Model Pengontrol Grafik GeForce RTX™ 2050 GeForce® MX350 GeForce® MX550 Iris Xe Graphics UHD Graphics Kapasitas Total Solid State Drive 256GB 512GB</string>
    <string name="prosesor_intel_core_i5_1155g7_4_core_clock_up_to_4_5_ghz_grafis_integrated_intel_iris_xe_vga_no_ram_8gb_ddr4_storage_ssd_512_gb_nvme_pcie_gen3x4_layar_ips_level_14_inci_full_hd_1920_x_1080_piksel_keyboard_backlight_keyboard">Prosesor: Intel Core i5-1155G7, 4-core clock up to 4.5 GHz Grafis: Integrated Intel Iris Xe VGA: No RAM: 8GB DDR4 Storage: SSD 512 GB NVMe PCIe Gen3x4 Layar: IPS-Level 14 inci Full HD 1920 x 1080 piksel Keyboard: Backlight Keyboard</string>
    <string name="idr_10_000_000_00">IDR.10.000.000,00</string>
    <string name="idr_15_000_000_00">IDR.15.000.000,00</string>
    <string name="laptopacer">LAPTOPACER</string>
    <string name="oppo_hs">Oppo hs</string>
    <string name="xiomihs">XIOMIHS</string>
    <string name="realme_hs">REALME HS</string>
    <string name="nokia_earphone">NOKIA EARPHONE</string>
    <string name="earphone_oppo">EARPHONE OPPO</string>
    <string name="enco_buds_24_jam_daya_tahan_baterai_pengurangan_noise_panggilan_cerdas_koneksi_otomatis_terbuka_mode_game_latensi_rendah">Enco Buds 24 Jam Daya Tahan Baterai Pengurangan Noise Panggilan Cerdas Koneksi Otomatis Terbuka Mode Game Latensi Rendah</string>
    <string name="earphone_xiomi">EARPHONE XIOMI</string>
    <string name="in_ear_headphones_frequency_response_20_20_000hz_sensitivity_98db_impedance_32_ohm_jack_3_5_mm_cable_length_1_25_meter">In-Ear Headphones Frequency Response : 20-20.000Hz Sensitivity : 98dB, Impedance : 32 Ohm Jack : 3.5 mm Cable Length : 1.25 meter</string>
    <string name="idr_300_000_00">IDR.300.000,00</string>
    <string name="earphone_realme">EARPHONE REALME</string>
    <string name="type_haedset_kabel_model_r50_plug_3_5mm_warna_kuning_dilengkapi_microphone_panjang_kabel_1_2_m_kompatibel_dengan_ponsel_laptop_dan_tablet_kontrol_panggilan_jawaban_panggilan_akhiri_panggilan">Type : Haedset Kabel - Model : R50 - Plug : 3.5mm - Warna : kuning - Dilengkapi Microphone - Panjang kabel : 1,2 m - Kompatibel Dengan : Ponsel, Laptop Dan Tablet. - Kontrol Panggilan: Jawaban Panggilan, Akhiri Panggilan.</string>
    <string name="airpod">AIRPOD</string>
    <string name="sensor_mikrofon_ganda_pembentuk_sinyal_sensor_optik_ganda_akselerometer_pendeteksi_gerak_akselerometer_pendeteksi_bicara_chip_chip_headphone_h1_kontrol_ketuk_dua_kali_untuk_memutar_melompat_maju_atau_menjawab_panggilan_telepon">Sensor Mikrofon ganda pembentuk sinyal Sensor optik ganda Akselerometer pendeteksi gerak Akselerometer pendeteksi bicara Chip Chip headphone H1 Kontrol Ketuk dua kali untuk memutar, melompat maju, atau menjawab panggilan telepon</string>
    <string name="earphone_nokia">EARPHONE NOKIA</string>
    <string name="nokia_e3100_plus_merupakan_earphone_wireless_dengan_desain_in_ear_yang_ergonomis_dan_dapat_diatur_sesuai_dengan_ukuran_telinga_pengguna_earphone_ini_menggunakan_driver_6mm_dengan_teknologi_noise_cancelling_pasif_yang_dapat_menghasilkan_suara_jernih_dan_minim_kebisingan">Nokia E3100 Plus merupakan earphone wireless dengan desain in-ear yang ergonomis dan dapat diatur sesuai dengan ukuran telinga pengguna. Earphone ini menggunakan driver 6mm dengan teknologi noise cancelling pasif yang dapat menghasilkan suara jernih dan minim kebisingan.</string>
</resources>