<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAF0E6"
    tools:context=".hsoppo">

    <TextView
        android:id="@+id/hsopo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/earphone_oppo"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imghsopo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/opohs"
        />

    <TextView
        android:id="@+id/exopohs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/enco_buds_24_jam_daya_tahan_baterai_pengurangan_noise_panggilan_cerdas_koneksi_otomatis_terbuka_mode_game_latensi_rendah"
        android:textAlignment="center"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idr_300_000_00"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="25sp"
        android:layout_marginTop="20dp"


        />






</LinearLayout>