<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF8DC"
    tools:context=".hp">

    <TextView
        android:id="@+id/iphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iphone12"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgip"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ip"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/samsung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/samsung"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgsam"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:src="@drawable/sm" />

    <TextView
        android:id="@+id/xiomi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xiomi"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/imgxiomi"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:src="@drawable/xio" />

    <TextView
        android:id="@+id/oppo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oppo"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgopo"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:src="@drawable/opo" />

    <TextView
        android:id="@+id/asus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asus"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgasus"
        android:layout_width="150dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:src="@drawable/asus" />


</LinearLayout>