<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFDAB9"
    tools:context=".hsrealme">

    <TextView
        android:id="@+id/hsrealme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/earphone_realme"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgrealme"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/realme"
        />

    <TextView
        android:id="@+id/exrealme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/type_haedset_kabel_model_r50_plug_3_5mm_warna_kuning_dilengkapi_microphone_panjang_kabel_1_2_m_kompatibel_dengan_ponsel_laptop_dan_tablet_kontrol_panggilan_jawaban_panggilan_akhiri_panggilan"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="IDR.120.000,00"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="25sp"
        android:layout_marginTop="20dp"


        />





</LinearLayout>