<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF5EE"
    tools:context=".hsair">

    <TextView
        android:id="@+id/hsair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/airpod"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgaiar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/irpod"
        />

    <TextView
        android:id="@+id/exir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sensor_mikrofon_ganda_pembentuk_sinyal_sensor_optik_ganda_akselerometer_pendeteksi_gerak_akselerometer_pendeteksi_bicara_chip_chip_headphone_h1_kontrol_ketuk_dua_kali_untuk_memutar_melompat_maju_atau_menjawab_panggilan_telepon"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="IDR.2.000.000,00"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="25sp"
        android:layout_marginTop="20dp"


        />

</LinearLayout>