<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAD2"
    tools:context=".msi">

    <TextView
        android:id="@+id/lapmsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LAPTOP MSI"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgmsi"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/msi"
        />

    <TextView
        android:id="@+id/exmsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/prosesor_intel_core_i5_1155g7_4_core_clock_up_to_4_5_ghz_grafis_integrated_intel_iris_xe_vga_no_ram_8gb_ddr4_storage_ssd_512_gb_nvme_pcie_gen3x4_layar_ips_level_14_inci_full_hd_1920_x_1080_piksel_keyboard_backlight_keyboard"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idr_15_000_000_00"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="25sp"
        android:layout_marginTop="20dp"


        />



</LinearLayout>