<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E0FFFF"
    tools:context=".hsnokia">

    <TextView
        android:id="@+id/hsnokia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/earphone_nokia"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgnokia"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/nokia"
        />

    <TextView
        android:id="@+id/exnokia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/nokia_e3100_plus_merupakan_earphone_wireless_dengan_desain_in_ear_yang_ergonomis_dan_dapat_diatur_sesuai_dengan_ukuran_telinga_pengguna_earphone_ini_menggunakan_driver_6mm_dengan_teknologi_noise_cancelling_pasif_yang_dapat_menghasilkan_suara_jernih_dan_minim_kebisingan"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="IDR.250.000,00"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="25sp"
        android:layout_marginTop="20dp"


        />




</LinearLayout>